--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<li><a href="courses.html" class="navBar__text">Courses</a></li>
 						<li><a href="events.html" class="navBar__text">Events</a></li>
 						<li><a href="blog.html" class="navBar__text">Blog</a></li>
-						<li><a href="" class="navBar__text">Contacts</a></li>
+						<li><a href="contacts.html" class="navBar__text">Contacts</a></li>
 					</ul>
 				</div>
 				<div class="navBar__buttons">
@@ -43,8 +43,9 @@
 					</div>
 					<h1 class="body__h1">Enjoy studying<br>with Createx<br>Online Courses</h1>
 					<div class="body__buttons">
-						<button class="button button--clear header__body__button"><a href="">About us</a></button>
-						<button class="button button--gradient explore__button"><a href="">Explore courses</a></button>
+						<button class="button button--clear header__body__button"><a href="aboutUs.html">About us</a></button>
+						<button class="button button--gradient explore__button"><a href="courses.html">Explore
+								courses</a></button>
 					</div>
 				</div>
 				<div class="body__group2">
@@ -94,7 +95,7 @@
 							ac eget.</li>
 						<li class="about__list">Quisque ut purus ultricies mattis mauris et dapibus.</li>
 					</ul>
-					<a href=""><button class="button button--gradient about__button">More about us</button></a>
+					<a href="aboutUs.html"><button class="button button--gradient about__button">More about us</button></a>
 				</div>
 			</div>
 			<div class="main__courses">
@@ -486,7 +487,7 @@
 			<div class="blog__body">
 				<div class="blog__listens">
 					<div class="blog__listen1">
-						<a href=""><img src="img/blog__marketing-podcast.png" alt=""
+						<a href="hrStatisticsBlog.html"><img src="img/blog__marketing-podcast.png" alt=""
 								class="blog__img blog__img__marketing"></a>
 						<ul class="blog__ul">
 							<li class="blog__li">Marketing</li>
@@ -496,10 +497,10 @@
 						<p class="blog__text">What is traffic arbitrage and does it<br> really make money?</p>
 						<p class="blog__text__footer">Pharetra, ullamcorper iaculis viverra parturient sed id<br> sed.
 							Convallis proin dignissim lacus, purus gravida...</p>
-						<a href="" class="blog__a">Listen</a>
+						<a href="hrStatisticsBlog.html" class="blog__a">Listen</a>
 					</div>
 					<div class="blog__listen2">
-						<a href=""><img src="img/blog__management-video.png" alt=""
+						<a href="hrStatisticsBlog.html"><img src="img/blog__management-video.png" alt=""
 								class="blog__img blog__img__marketing"></a>
 						<ul class="blog__ul">
 							<li class="blog__li">Management</li>
@@ -509,10 +510,11 @@
 						<p class="blog__text">What to do and who to talk to if you<br> want to get feedback on the product</p>
 						<p class="blog__text__footer">Neque a, senectus consectetur odio in aliquet nec eu.<br> Ultricies ac
 							nibh urna urna sagittis faucibus...</p>
-						<a href="" class="blog__a">Watch</a>
+						<a href="hrStatisticsBlog.html" class="blog__a">Watch</a>
 					</div>
 					<div class="blog__listen3">
-						<a href=""><img src="img/blog_design.png" alt="" class="blog__img blog__img__marketing"></a>
+						<a href="hrStatisticsBlog.html"><img src="img/blog_design.png" alt=""
+								class="blog__img blog__img__marketing"></a>
 						<ul class="blog__ul">
 							<li class="blog__li">Design</li>
 							<li class="blog__li blog__li-date">August 8, 2020</li>
@@ -521,7 +523,7 @@
 							creativity?</p>
 						<p class="blog__text__footer">Curabitur nisl tincidunt eros venenatis vestibulum ac<br> placerat.
 							Tortor, viverra sed vulputate ultrices...</p>
-						<a href="" class="blog__a">Read</a>
+						<a href="hrStatisticsBlog.html" class="blog__a">Read</a>
 					</div>
 				</div>
 			</div>
