--- a/events.html
+++ b/events.html
@@ -14,13 +14,13 @@
 <body>
 	<div class="navBar navBar__courses-page">
 		<div class="navBar__group1">
-			<img src="img/logo.svg" alt="" class="logo navBar__logo">
+			<a href="index.html"><img src="img/logo.svg" alt="" class="logo navBar__logo"></a>
 			<ul class="navBar__menu">
 				<li><a href="aboutUs.html" class="navBar__text">About Us</a></li>
 				<li><a href="courses.html" class="navBar__text">Courses</a></li>
 				<li><a href="events.html" class="navBar__text our__navBAr__text">Events</a></li>
 				<li><a href="blog.html" class="navBar__text">Blog</a></li>
-				<li><a href="" class="navBar__text">Contacts</a></li>
+				<li><a href="contacts.html" class="navBar__text">Contacts</a></li>
 			</ul>
 		</div>
 		<div class="navBar__buttons">
@@ -252,7 +252,7 @@
 						<a href="blog.html">
 							<li class="footer__li">Blog</li>
 						</a>
-						<a href="">
+						<a href="contacts.html">
 							<li class="footer__li">Contacts</li>
 						</a>
 					</ul>
