--- a/kathrynEvent.html
+++ b/kathrynEvent.html
@@ -22,13 +22,14 @@
 					<li><a href="courses.html" class="navBar__text">Courses</a></li>
 					<li><a href="events.html" class="navBar__text our__navBAr__text">Events</a></li>
 					<li><a href="blog.html" class="navBar__text">Blog</a></li>
-					<li><a href="" class="navBar__text">Contacts</a></li>
+					<li><a href="contacts.html" class="navBar__text">Contacts</a></li>
 				</ul>
 			</div>
 			<div class="navBar__buttons">
 				<button class="button--gradient consultation__button"><a href="">Get consultation</a></button>
-				<button href="" class="button__invis log-in__button"><a href=""><img src="img/ProfileLogInButton.svg" alt=""
-							class="double__img">Log in / Register</a></button>
+				<button href="" class="button__invis log-in__button"><a href=""><img
+							src="images/indexImg/ProfileLogInButton.svg" alt="" class="double__img">Log in /
+						Register</a></button>
 			</div>
 		</div>
 		<div class="teacher__header text-small-center">Online lecture</div>
@@ -192,7 +193,7 @@
 						<a href="blog.html">
 							<li class="footer__li">Blog</li>
 						</a>
-						<a href="">
+						<a href="contacts.html">
 							<li class="footer__li">Contacts</li>
 						</a>
 					</ul>
