--- a/blog.html
+++ b/blog.html
@@ -23,13 +23,14 @@
 					<li><a href="courses.html" class="navBar__text">Courses</a></li>
 					<li><a href="events.html" class="navBar__text">Events</a></li>
 					<li><a href="" class="navBar__text our__navBAr__text">Blog</a></li>
-					<li><a href="" class="navBar__text">Contacts</a></li>
+					<li><a href="contacts.html" class="navBar__text">Contacts</a></li>
 				</ul>
 			</div>
 			<div class="navBar__buttons">
 				<button class="button--gradient consultation__button"><a href="">Get consultation</a></button>
-				<button href="" class="button__invis log-in__button"><a href=""><img src="img/ProfileLogInButton.svg" alt=""
-							class="double__img">Log in / Register</a></button>
+				<button href="" class="button__invis log-in__button"><a href=""><img
+							src="images/indexImg/ProfileLogInButton.svg" alt="" class="double__img">Log in /
+						Register</a></button>
 			</div>
 		</div>
 		<p class="text-small text-small-center">Our blog</p>
@@ -59,7 +60,8 @@
 			<div class="blog__body">
 				<div class="blog__listens__grid">
 					<div class="blog__listen1 blog__listen ">
-						<a href=""><img src="img/blog__marketing-podcast.png" alt="" class="blog__img blogs__images"></a>
+						<a href="hrStatisticsBlog.html"><img src="img/blog__marketing-podcast.png" alt=""
+								class="blog__img blogs__images"></a>
 						<ul class="blog__ul">
 							<li class="blog__li">Marketing</li>
 							<li class="blog__li blog__li-date">September 4, 2020</li>
@@ -68,10 +70,10 @@
 						<p class="blog__text">What is traffic arbitrage and does it<br> really make money?</p>
 						<p class="blog__text__footer">Pharetra, ullamcorper iaculis viverra parturient sed id<br> sed.
 							Convallis proin dignissim lacus, purus gravida...</p>
-						<a href="" class="blog__a">Listen</a>
+						<a href="hrStatisticsBlog.html" class="blog__a">Listen</a>
 					</div>
 					<div class="blog__listen2 blog__listen">
-						<a href=""><img src="img/blog__management-video.png" alt=""
+						<a href="hrStatisticsBlog.html"><img src="img/blog__management-video.png" alt=""
 								class="blog__img blog__img__marketing"></a>
 						<ul class="blog__ul">
 							<li class="blog__li">Management</li>
@@ -83,10 +85,10 @@
 						<p class="blog__text__footer">Neque a, senectus consectetur odio in aliquet nec eu.<br> Ultricies
 							ac
 							nibh urna urna sagittis faucibus...</p>
-						<a href="" class="blog__a">Watch</a>
+						<a href="hrStatisticsBlog.html" class="blog__a">Watch</a>
 					</div>
 					<div class="blog__listen3 blog__listen">
-						<a href=""><img src="images/blogImg/blog__design-yellow.jpg" alt=""
+						<a href="hrStatisticsBlog.html"><img src="images/blogImg/blog__design-yellow.jpg" alt=""
 								class="blog__img blog__img__marketing"></a>
 						<ul class="blog__ul">
 							<li class="blog__li">Design</li>
@@ -96,10 +98,10 @@
 							creativity?</p>
 						<p class="blog__text__footer">Curabitur nisl tincidunt eros venenatis vestibulum ac<br> placerat.
 							Tortor, viverra sed vulputate ultrices...</p>
-						<a href="" class="blog__a">Read</a>
+						<a href="hrStatisticsBlog.html" class="blog__a">Read</a>
 					</div>
 					<div class="blog__listen4">
-						<a href=""><img src="images/blogImg/blog__hrStatistics.jpg" alt=""
+						<a href="hrStatisticsBlog.html"><img src="images/blogImg/blog__hrStatistics.jpg" alt=""
 								class="blog__img blog__img__marketing"></a>
 						<ul class="blog__ul">
 							<li class="blog__li">HR & Recruting</li>
@@ -109,10 +111,10 @@
 						<p class="blog__text__footer">Massa, lectus nibh consectetur aliquet nunc risus aenean. Leo hac netus
 							bibendum diam adipiscing aenean nisl. Molestie nullam ante mattis ac sit vitae pellentesque mi
 							etiam. Morbi commodo tempor, massa vivamus. A molestie id semper fermentum pretium...</p>
-						<a href="" class="blog__a">Read</a>
+						<a href="hrStatisticsBlog.html" class="blog__a">Read</a>
 					</div>
 					<div class="blog__listen5">
-						<a href=""><img src="images/blogImg/blog__management.png" alt=""
+						<a href="hrStatisticsBlog.html"><img src="images/blogImg/blog__management.png" alt=""
 								class="blog__img blog__img__marketing"></a>
 						<ul class="blog__ul">
 							<li class="blog__li">Management</li>
@@ -122,10 +124,10 @@
 						<p class="blog__text">What to do and who to talk to if you want to get feedback on the product</p>
 						<p class="blog__text__footer">Neque a, senectus consectetur odio in aliquet nec eu. Ultricies ac nibh
 							urna urna sagittis faucibus. Curabitur nisl tincidunt eros venenatis...</p>
-						<a href="" class="blog__a">Watch</a>
+						<a href="hrStatisticsBlog.html" class="blog__a">Watch</a>
 					</div>
 					<div class="blog__listen6">
-						<a href=""><img src="images/blogImg/blog__design.jpg" alt=""
+						<a href="hrStatisticsBlog.html"><img src="images/blogImg/blog__design.jpg" alt=""
 								class="blog__img blog__img__marketing"></a>
 						<ul class="blog__ul">
 							<li class="blog__li">Design</li>
@@ -135,10 +137,10 @@
 						<p class="blog__text">What are color profiles and how they work in graphic design</p>
 						<p class="blog__text__footer">Aliquam vulputate hendrerit quam sollicitudin urna enim viverra gravida.
 							Consectetur urna arcu eleifend...</p>
-						<a href="" class="blog__a">Listen</a>
+						<a href="hrStatisticsBlog.html" class="blog__a">Listen</a>
 					</div>
 					<div class="blog__listen7">
-						<a href=""><img src="images/blogImg/blog__management-pink.jpg" alt=""
+						<a href="hrStatisticsBlog.html"><img src="images/blogImg/blog__management-pink.jpg" alt=""
 								class="blog__img blog__img__marketing"></a>
 						<ul class="blog__ul">
 							<li class="blog__li">Management</li>
@@ -148,10 +150,10 @@
 						<p class="blog__text">Startup: how to build a team that will live longer than a year</p>
 						<p class="blog__text__footer">Nisi, massa ut sit faucibus et diam. Faucibus at malesuada at justo
 							scelerisque in nisi, urna...</p>
-						<a href="" class="blog__a">Watch</a>
+						<a href="hrStatisticsBlog.html" class="blog__a">Watch</a>
 					</div>
 					<div class="blog__listen8">
-						<a href=""><img src="images/blogImg/blog__marketing.jpg" alt=""
+						<a href="hrStatisticsBlog.html"><img src="images/blogImg/blog__marketing.jpg" alt=""
 								class="blog__img blog__img__marketing"></a>
 						<ul class="blog__ul">
 							<li class="blog__li">Marketing</li>
@@ -160,7 +162,7 @@
 						<p class="blog__text">How to get customers to love your business from the start</p>
 						<p class="blog__text__footer">Malesuada in augue mi feugiat morbi a aliquet enim. Elementum lacus,
 							pellentesque etiam arcu tristique ac...</p>
-						<a href="" class="blog__a">Read</a>
+						<a href="hrStatisticsBlog.html" class="blog__a">Read</a>
 					</div>
 				</div>
 			</div>
@@ -182,79 +184,80 @@
 				</div>
 			</div>
 		</div>
-		<footer>
-			<div class="footer__info">
-				<div class="footer__info__groups">
-					<div class="footer__info_group1">
-						<img src="img/logo-white.svg" alt="" class="footer__logo">
-						<p class="footer__p">Createx Online School is a leader in online studying. We have lots of courses and
-							programs from the main market experts. We provide relevant approaches to online learning,
-							internships and employment in the largest companies in the country. </p>
-						<div class="footer__media">
-							<a href=""><img src="img/facebook.svg" alt="" class="footer__img"></a>
-							<a href=""><img src="img/twitter.svg" alt="" class="footer__img"></a>
-							<a href=""><img src="img/youTube.svg" alt="" class="footer__img"></a>
-							<a href=""><img src="img/telegram.svg" alt="" class="footer__img"></a>
-							<a href=""><img src="img/instagram.svg" alt="" class="footer__img"></a>
-							<a href=""><img src="img/linkedIn.svg" alt="" class="footer__img"></a>
-						</div>
+	</div>
+	<footer>
+		<div class="footer__info">
+			<div class="footer__info__groups">
+				<div class="footer__info_group1">
+					<img src="img/logo-white.svg" alt="" class="footer__logo">
+					<p class="footer__p">Createx Online School is a leader in online studying. We have lots of courses and
+						programs from the main market experts. We provide relevant approaches to online learning,
+						internships and employment in the largest companies in the country. </p>
+					<div class="footer__media">
+						<a href=""><img src="img/facebook.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="img/twitter.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="img/youTube.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="img/telegram.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="img/instagram.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="img/linkedIn.svg" alt="" class="footer__img"></a>
 					</div>
-					<div class="footer__info_group2">
-						<h3 class="footer__h3">SITE MAP</h3>
-						<ul class="footer__ul">
-							<a href="aboutUs.html">
-								<li class="footer__li">About Us</li>
-							</a>
-							<a href="courses.html">
-								<li class="footer__li">Courses</li>
-							</a>
-							<a href="events.html">
-								<li class="footer__li">Events</li>
-							</a>
-							<a href="">
-								<li class="footer__li">Blog</li>
-							</a>
-							<a href="">
-								<li class="footer__li">Contacts</li>
-							</a>
-						</ul>
-					</div>
-					<div class="footer__info_group3">
-						<h3 class="footer__h3">COURSES</h3>
-						<ul class="footer__ul">
-							<li class="footer__li">Marketing</li>
-							<li class="footer__li">Management</li>
-							<li class="footer__li">HR & Recruting</li>
-							<li class="footer__li">Design</li>
-							<li class="footer__li">Development</li>
-						</ul>
-					</div>
-					<div class="footer__info_group4">
-						<h3 class="footer__h3">CONTACT US</h3>
-						<ul class="footer__ul">
-							<li class="footer__li footer__li-phone">(405) 555-0128</li>
-							<li class="footer__li footer__li-mail">hello@createx.com</li>
-						</ul>
-					</div>
-					<div class="footer__info_group5">
-						<h3 class="footer__h3">SIGN UP TO OUR NEWSLETTER</h3>
-						<input type="text" class="footer__searchButton" placeholder="Email address">
-						<p class="footer__p footer__p-small">*Subscribe to our newsletter to receive communications and early
-							updates from Createx SEO Agency.</p>
-					</div>
+				</div>
+				<div class="footer__info_group2">
+					<h3 class="footer__h3">SITE MAP</h3>
+					<ul class="footer__ul">
+						<a href="aboutUs.html">
+							<li class="footer__li">About Us</li>
+						</a>
+						<a href="courses.html">
+							<li class="footer__li">Courses</li>
+						</a>
+						<a href="events.html">
+							<li class="footer__li">Events</li>
+						</a>
+						<a href="">
+							<li class="footer__li">Blog</li>
+						</a>
+						<a href="contacts.html">
+							<li class="footer__li">Contacts</li>
+						</a>
+					</ul>
+				</div>
+				<div class="footer__info_group3">
+					<h3 class="footer__h3">COURSES</h3>
+					<ul class="footer__ul">
+						<li class="footer__li">Marketing</li>
+						<li class="footer__li">Management</li>
+						<li class="footer__li">HR & Recruting</li>
+						<li class="footer__li">Design</li>
+						<li class="footer__li">Development</li>
+					</ul>
+				</div>
+				<div class="footer__info_group4">
+					<h3 class="footer__h3">CONTACT US</h3>
+					<ul class="footer__ul">
+						<li class="footer__li footer__li-phone">(405) 555-0128</li>
+						<li class="footer__li footer__li-mail">hello@createx.com</li>
+					</ul>
+				</div>
+				<div class="footer__info_group5">
+					<h3 class="footer__h3">SIGN UP TO OUR NEWSLETTER</h3>
+					<input type="text" class="footer__searchButton" placeholder="Email address">
+					<p class="footer__p footer__p-small">*Subscribe to our newsletter to receive communications and early
+						updates from Createx SEO Agency.</p>
 				</div>
 			</div>
-			<div class="footer">
-				<div class="footer__group1">
-					<p class="made__p">© All rights reserved. Made with</p>
-					<p class="made__p made__p-heart">by Createx Studio</p>
-					</p>
-				</div>
-				<div id="goTop">
-					<div class="goTop">GO TO TOP</div>
-				</div>
+		</div>
+		<div class="footer">
+			<div class="footer__group1">
+				<p class="made__p">© All rights reserved. Made with</p>
+				<p class="made__p made__p-heart">by Createx Studio</p>
+				</p>
 			</div>
-		</footer>
+			<div id="goTop">
+				<div class="goTop">GO TO TOP</div>
+			</div>
+		</div>
+	</footer>
 </body>
 
 </html>
