--- a/blog.html
+++ b/blog.html
@@ -179,8 +179,8 @@
 				<div class="subscribe__body event__subscribe__body">
 					<input type="text" class="searchButton" placeholder="Your working email">
 					<a href=""><button class="button button--gradient subscribe__button">Subscribe</button></a>
-					<p><input type="checkbox" name="a" value="text">I agree to receive
-						communications from Createx School</p>
+					<input type="checkbox" class="custom-checkbox" id="school" name="happy" value="yes">
+					<label for="school">I agree to receive communications from Createx School</label>
 				</div>
 			</div>
 		</div>
