--- a/hrStatisticsBlog.html
+++ b/hrStatisticsBlog.html
@@ -18,7 +18,7 @@
 	<div class="our__container">
 		<div class="navBar navBar__courses-page">
 			<div class="navBar__group1">
-				<a href="index.html"><img src="img/logo.svg" alt="" class="logo navBar__logo"></a>
+				<a href="index.html"><img src="images/indexImg/logo.svg" alt="" class="logo navBar__logo"></a>
 				<ul class="navBar__menu">
 					<li><a href="aboutUs.html" class="navBar__text">About Us</a></li>
 					<li><a href="courses.html" class="navBar__text">Courses</a></li>
@@ -59,26 +59,19 @@
 					hendrerit ac euismod. </h4>
 				<p class="blog__post__text">
 					At facilisi sapien posuere eget nunc senectus proin nullam. Tortor senectus in et sagittis, vitae diam
-					cras
-					dignissim. Varius adipiscing eget diam nisi. Orci, consectetur vulputate metus ornare pharetra, neque,
-					fermentum. Vel nec rhoncus, non nunc, neque in massa. Feugiat leo nam nisl lacinia amet, odio. Mi varius
-					viverra risus vel.
+					cras dignissim. Varius adipiscing eget diam nisi. Orci, consectetur vulputate metus ornare pharetra,
+					neque, fermentum. Vel nec rhoncus, non nunc, neque in massa. Feugiat leo nam nisl lacinia amet, odio. Mi
+					varius viverra risus vel.
 					<br><br>
 					Amet, morbi sed pharetra, elit eget mi potenti. Condimentum orci interdum feugiat lectus libero duis.
-					Nisl
-					massa, elementum varius sit. Nunc felis, porttitor aliquam urna, accumsan et sed. Aliquet non sed duis
-					diam
-					vehicula rhoncus. In dictum nullam tincidunt semper pellentesque purus morbi sed. Ut aliquet velit
-					pharetra,
-					nisi nunc, non.
+					Nisl massa, elementum varius sit. Nunc felis, porttitor aliquam urna, accumsan et sed. Aliquet non sed
+					duis diam vehicula rhoncus. In dictum nullam tincidunt semper pellentesque purus morbi sed. Ut aliquet
+					velit pharetra, nisi nunc, non.
 				</p>
 				<p class="carousel__text blog__carousel__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					Justo,
-					amet lectus quam
-					viverra<br>
-					mus lobortis fermentum amet, eu. Pulvinar eu sed purus facilisi. Vitae id turpis
-					tempus<br> ornare turpis quis non. Congue tortor in euismod vulputate etiam eros. Pulvinar neque<br>
-					pharetra arcu diam maecenas diam integer in.</p>
+					Justo,amet lectus quam viverra mus lobortis fermentum amet, eu. Pulvinar eu sed purus facilisi. Vitae
+					id turpis tempus ornare turpis quis non. Congue tortor in euismod vulputate etiam eros. Pulvinar
+					neque pharetra arcu diam maecenas diam integer in.</p>
 				<p class="blog__post__text">Mauris amet arcu nisl vel dictum tellus. Sed rhoncus, ut sed id ut erat mattis.
 					Vitae mus blandit in neque amet non fringilla blandit:</p>
 				<ul class="about__ul about__list__blog">
@@ -173,15 +166,15 @@
 	</div>
 	<div class="body-gray">
 		<div class="blog__subscribe">
-			<img src="images/blogImg/blog__subscribe.png" alt="">
+			<img src="images/blogImg/blog__subscribe.svg" alt="">
 			<div class="event__subscribe__group">
 				<h2 class="discount__header blog__discount">Want to get the best articles weekly?<br>
 					Subscribe to our newsletter!</h2>
 				<div class="subscribe__body event__subscribe__body">
 					<input type="text" class="searchButton" placeholder="Your working email">
 					<a href=""><button class="button button--gradient subscribe__button">Subscribe</button></a>
-					<p><input type="checkbox" name="a" value="text">I agree to receive
-						communications from Createx School</p>
+					<input type="checkbox" class="custom-checkbox" id="school" name="happy" value="yes">
+					<label for="school">I agree to receive communications from Createx School</label>
 				</div>
 			</div>
 		</div>
@@ -190,17 +183,17 @@
 		<div class="footer__info">
 			<div class="footer__info__groups">
 				<div class="footer__info_group1">
-					<img src="img/logo-white.svg" alt="" class="footer__logo">
+					<img src="images/indexImg/logo-white.svg" alt="" class="footer__logo">
 					<p class="footer__p">Createx Online School is a leader in online studying. We have lots of courses and
 						programs from the main market experts. We provide relevant approaches to online learning,
 						internships and employment in the largest companies in the country. </p>
 					<div class="footer__media">
-						<a href=""><img src="img/facebook.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/twitter.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/youTube.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/telegram.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/instagram.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/linkedIn.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/facebook.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/twitter.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/youTube.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/telegram.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/instagram.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/linkedIn.svg" alt="" class="footer__img"></a>
 					</div>
 				</div>
 				<div class="footer__info_group2">
