--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<header class="main-beige">
 			<div class="navBar">
 				<div class="navBar__group1">
-					<img src="img/logo.svg" alt="" class="logo navBar__logo">
+					<img src="images/indexImg/logo.svg" alt="" class="logo navBar__logo">
 					<ul class="navBar__menu">
 						<li><a href="aboutUs.html" class="navBar__text">About Us</a></li>
 						<li><a href="courses.html" class="navBar__text">Courses</a></li>
@@ -49,7 +49,7 @@
 					</div>
 				</div>
 				<div class="body__group2">
-					<img src="img/header__illustration.svg" alt="" class="body__illustration">
+					<img src="images/indexImg/header__illustration.svg" alt="" class="body__illustration">
 				</div>
 			</div>
 			<div class="header__stats">
@@ -73,7 +73,7 @@
 		</header>
 		<div class="main__body">
 			<div class="main__about">
-				<img src="img/about__girl.jpg" alt="" class="about_girl">
+				<img src="images/indexImg/about__girl.jpg" alt="" class="about_girl">
 				<div class="about__group1">
 					<p class="text-small">Who we are</p>
 					<h2 class="header__text">Why Createx?</h2>
@@ -107,7 +107,7 @@
 				<div class="courses__cards">
 					<a href="courses.html">
 						<div class="courses__card card--marketing">
-							<img src="img/JeromeBell__marketing.jpg" alt="" class="card__img">
+							<img src="images/indexImg/JeromeBell__marketing.jpg" alt="" class="card__img">
 							<div class="teacher__courses__card__group courses__card__group">
 								<h3 class="card__header card__header--marketing">Marketing</h3>
 								<p class="card__text">The Ultimate Google Ads Training Course</p>
@@ -120,7 +120,7 @@
 					</a>
 					<a href="courses.html">
 						<div class="courses__card card--managment">
-							<img src="img/MarvinMcKinney__management.jpg" alt="" class="card__img">
+							<img src="images/indexImg/MarvinMcKinney__management.jpg" alt="" class="card__img">
 							<div class="courses__card__group2">
 								<h3 class="card__header card__header--management">Management</h3>
 								<p class="card__text">Prduct Management Fundamentals</p>
@@ -133,7 +133,7 @@
 					</a>
 					<a href="courses.html">
 						<div class="courses__card card--hr">
-							<img src="img/LeslieAlexanderLi__hr.jpg" alt="" class="card__img">
+							<img src="images/indexImg/LeslieAlexanderLi__hr.jpg" alt="" class="card__img">
 							<div class="courses__card__group3">
 								<h3 class="card__header card__header--hr">HR & Recruting</h3>
 								<p class="card__text">HR Management and Analytics</p>
@@ -146,7 +146,7 @@
 					</a>
 					<a href="courses.html">
 						<div class="courses__card card--marketing">
-							<img src="img/KristinWatson__marketing.jpg" alt="" class="card__img">
+							<img src="images/indexImg/KristinWatson__marketing.jpg" alt="" class="card__img">
 							<div class="courses__card__group">
 								<h3 class="card__header card__header--marketing">Marketing</h3>
 								<p class="card__text">Brand Management & PR Communications</p>
@@ -159,7 +159,7 @@
 					</a>
 					<a href="courses.html">
 						<div class="courses__card card--managment">
-							<img src="img/DianneRussell__management.jpg" alt="" class="card__img">
+							<img src="images/indexImg/DianneRussell__management.jpg" alt="" class="card__img">
 							<div class="courses__card__group2">
 								<h3 class="card__header card__header--management">Management</h3>
 								<p class="card__text">Business Development<br> Management</p>
@@ -172,7 +172,7 @@
 					</a>
 					<a href="courses.html">
 						<div class="courses__card card--design">
-							<img src="img/GuyHawkins__design.jpg" alt="" class="card__img">
+							<img src="images/indexImg/GuyHawkins__design.jpg" alt="" class="card__img">
 							<div class="courses__card__group4">
 								<h3 class="card__header card__header--design">Design</h3>
 								<p class="card__text">Graphic Design Basic</p>
@@ -190,17 +190,19 @@
 				<h2 class="header__text header__text-center">That’s how we do it</h2>
 				<div class="benefits__buttons">
 					<a href=""><button class="benefits__button-width button--clear button--double benefits__button-star"><img
-								src="img/benefits__button-star.svg" alt="" class="double__img" class="double__img-star">
+								src="images/indexImg/benefits__button-star.svg" alt="" class="double__img"
+								class="double__img-star">
 							Experienced
 							Tutors</button></a>
 					<button class="button benefits__button-width button__invis button--double"><a href=""><img
-								src="img/benefits__button-feedback.svg" alt="" class="double__img">Feedback
+								src="images/indexImg/benefits__button-feedback.svg" alt="" class="double__img">Feedback
 							& Support</a></button>
 					<button class="button benefits__button-width button__invis button--double"><a href=""><img
-								src="img/benefits__button-online.svg" alt="" class="double__img">24/7
+								src="images/indexImg/benefits__button-online.svg" alt="" class="double__img">24/7
 							Online Library</a></button>
 					<button class="button benefits__button-width button__invis button--double"><a href=""><img
-								src="img/benefits__nutton-community.svg" alt="" class="double__img">Community</a></button>
+								src="images/indexImg/benefits__button-community.svg" alt=""
+								class="double__img">Community</a></button>
 				</div>
 				<div class="benefits__body">
 					<div class="benefits__group1">
@@ -210,7 +212,7 @@
 							diam mi amet massa. Fermentum diam diam sociis vestibulum. Nulla nisl accumsan, id dignissim massa
 							utamet. Amet enim, nisi tempus vehicula.</p>
 					</div>
-					<img src="img/benefits__illustration.svg" alt="" class="benefits__img">
+					<img src="images/indexImg/benefits__illustration.svg" alt="" class="benefits__img">
 				</div>
 			</div>
 		</div>
@@ -281,13 +283,13 @@
 				<p class="certificate__text">We are accredited by international professional<br> organizations and
 					institutes:</p>
 				<div class="certificate__img__group">
-					<img src="img/certificate__logo-strategy.jpg" alt="" class="certificate__img">
-					<img src="img/certificate__logo-consulting.png" alt="" class="certificate__img">
-					<img src="img/certificate__logo-health.png" alt="" class="certificate__img">
+					<img src="images/indexImg/certificate__logo-strategy.png" alt="" class="certificate__img">
+					<img src="images/indexImg/certificate__logo-consulting.png" alt="" class="certificate__img">
+					<img src="images/indexImg/certificate__logo-health.png" alt="" class="certificate__img">
 				</div>
 			</div>
 			<div class="certificate__group2">
-				<img src="img/certificate__img.png" alt="" class="certificate__main__img">
+				<img src="images/indexImg/certificate__img.png" alt="" class="certificate__main__img">
 			</div>
 		</div>
 		<div class="body-gray">
@@ -300,56 +302,56 @@
 						<ul>
 							<a href="codyFisher__courses.html">
 								<li>
-									<img src="img/dianne.png" class="team__img">
+									<img src="images/indexImg/dianne.png" class="team__img">
 									<p class="team__name">Dianne Russell</p>
 									<p class="prof">Founder and CEO</p>
 								</li>
 							</a>
 							<a href="codyFisher__courses.html">
 								<li>
-									<img src="img/jerome.png" class="team__img">
+									<img src="images/indexImg/jerome.png" class="team__img">
 									<p class="team__name">Dianne Russell</p>
 									<p class="prof">Founder and CEO</p>
 								</li>
 							</a>
 							<a href="codyFisher__courses.html">
 								<li>
-									<img src="img/kristin.png" class="team__img">
+									<img src="images/indexImg/kristin.png" class="team__img">
 									<p class="team__name">Dianne Russell</p>
 									<p class="prof">Founder and CEO</p>
 								</li>
 							</a>
 							<a href="codyFisher__courses.html">
 								<li>
-									<img src="img/marvin.png" class="team__img">
+									<img src="images/indexImg/marvin.png" class="team__img">
 									<p class="team__name">Dianne Russell</p>
 									<p class="prof">Founder and CEO</p>
 								</li>
 							</a>
 							<a href="codyFisher__courses.html">
 								<li>
-									<img src="img/leslie.png" class="team__img">
+									<img src="images/indexImg/leslie.png" class="team__img">
 									<p class="team__name">Dianne Russell</p>
 									<p class="prof">Founder and CEO</p>
 								</li>
 							</a>
 							<a href="codyFisher__courses.html">
 								<li>
-									<img src="img/kathryn.png" class="team__img">
+									<img src="images/indexImg/kathryn.png" class="team__img">
 									<p class="team__name">Dianne Russell</p>
 									<p class="prof">Founder and CEO</p>
 								</li>
 							</a>
 							<a href="codyFisher__courses.html">
 								<li>
-									<img src="img/brooklyn.png" class="team__img">
+									<img src="images/indexImg/brooklyn.png" class="team__img">
 									<p class="team__name">Dianne Russell</p>
 									<p class="prof">Founder and CEO</p>
 								</li>
 							</a>
 							<a href="codyFisher__courses.html">
 								<li>
-									<img src="img/cody.png" class="team__img">
+									<img src="images/indexImg/cody.png" class="team__img">
 									<p class="team__name">Dianne Russell</p>
 									<p class="prof">Founder and CEO</p>
 								</li>
@@ -487,7 +489,7 @@
 			<div class="blog__body">
 				<div class="blog__listens">
 					<div class="blog__listen1">
-						<a href="hrStatisticsBlog.html"><img src="img/blog__marketing-podcast.png" alt=""
+						<a href="hrStatisticsBlog.html"><img src="images/blogImg/blog__marketing-podcast.png" alt=""
 								class="blog__img blog__img__marketing"></a>
 						<ul class="blog__ul">
 							<li class="blog__li">Marketing</li>
@@ -500,7 +502,7 @@
 						<a href="hrStatisticsBlog.html" class="blog__a">Listen</a>
 					</div>
 					<div class="blog__listen2">
-						<a href="hrStatisticsBlog.html"><img src="img/blog__management-video.png" alt=""
+						<a href="hrStatisticsBlog.html"><img src="images/blogImg/blog__management-video.png" alt=""
 								class="blog__img blog__img__marketing"></a>
 						<ul class="blog__ul">
 							<li class="blog__li">Management</li>
@@ -513,7 +515,7 @@
 						<a href="hrStatisticsBlog.html" class="blog__a">Watch</a>
 					</div>
 					<div class="blog__listen3">
-						<a href="hrStatisticsBlog.html"><img src="img/blog_design.png" alt=""
+						<a href="hrStatisticsBlog.html"><img src="images/blogImg/blog_design.png" alt=""
 								class="blog__img blog__img__marketing"></a>
 						<ul class="blog__ul">
 							<li class="blog__li">Design</li>
@@ -537,25 +539,25 @@
 
 			</div>
 			<div class="sibscribe__img__group">
-				<img src="img/sibscribe__img.png" alt="" class="sibscribe__img">
-				<img src="img/sibscribe__img.png" alt="">
+				<img src="images/indexImg/sibscribe__img.png" alt="" class="sibscribe__img">
+				<img src="images/indexImg/sibscribe__img.png" alt="">
 			</div>
 		</div>
 		<footer>
 			<div class="footer__info">
 				<div class="footer__info__groups">
 					<div class="footer__info_group1">
-						<img src="img/logo-white.svg" alt="" class="footer__logo">
+						<img src="images/indexImg/logo-white.svg" alt="" class="footer__logo">
 						<p class="footer__p">Createx Online School is a leader in online studying. We have lots of courses and
 							programs from the main market experts. We provide relevant approaches to online learning,
 							internships and employment in the largest companies in the country. </p>
 						<div class="footer__media">
-							<a href=""><img src="img/facebook.svg" alt="" class="footer__img"></a>
-							<a href=""><img src="img/twitter.svg" alt="" class="footer__img"></a>
-							<a href=""><img src="img/youTube.svg" alt="" class="footer__img"></a>
-							<a href=""><img src="img/telegram.svg" alt="" class="footer__img"></a>
-							<a href=""><img src="img/instagram.svg" alt="" class="footer__img"></a>
-							<a href=""><img src="img/linkedIn.svg" alt="" class="footer__img"></a>
+							<a href=""><img src="images/indexImg/facebook.svg" alt="" class="footer__img"></a>
+							<a href=""><img src="images/indexImg/twitter.svg" alt="" class="footer__img"></a>
+							<a href=""><img src="images/indexImg/youTube.svg" alt="" class="footer__img"></a>
+							<a href=""><img src="images/indexImg/telegram.svg" alt="" class="footer__img"></a>
+							<a href=""><img src="images/indexImg/instagram.svg" alt="" class="footer__img"></a>
+							<a href=""><img src="images/indexImg/linkedIn.svg" alt="" class="footer__img"></a>
 						</div>
 					</div>
 					<div class="footer__info_group2">
