--- a/kathrynEvent.html
+++ b/kathrynEvent.html
@@ -16,7 +16,7 @@
 	<div class="main-beige">
 		<div class="navBar navBar__courses-page">
 			<div class="navBar__group1">
-				<a href="index.html"><img src="img/logo.svg" alt="" class="logo navBar__logo"></a>
+				<a href="index.html"><img src="images/indexImg/logo.svg" alt="" class="logo navBar__logo"></a>
 				<ul class="navBar__menu">
 					<li><a href="aboutUs.html" class="navBar__text">About Us</a></li>
 					<li><a href="courses.html" class="navBar__text">Courses</a></li>
@@ -87,9 +87,9 @@
 					sed pharetra. Ac commodo platea id habitasse proin. Nullam sit nec ipsum posuere non. Nam vel aliquam
 					tristique sollicitudin interdum quam. </div>
 				<div class="events__logos">
-					<img src="img/DelMarStrategyLogo.png" alt="">
-					<img src="img/SentinalConsultingLogo.png" alt="">
-					<img src="img/NationalHealthLogo.png" alt="">
+					<img src="images/aboutUsImg/DelMarStrategyLogo.png" alt="">
+					<img src="images/aboutUsImg/SentinalConsultingLogo.png" alt="">
+					<img src="images/aboutUsImg/NationalHealthLogo.png" alt="">
 				</div>
 				<!--<div class="teacher__media">
 					<img src="img/fb.svg" alt="" class="teacher__media__img">
@@ -117,7 +117,7 @@
 		</div>
 		<div class="main-beige event__beige">
 			<div class="event__subscribe">
-				<img src="images/kathrynEventImg/event__subscribe.png" alt="">
+				<img src="images/kathrynEventImg/event__subscribe.svg" alt="">
 				<div class="event__subscribe__group">
 					<h2 class="discount__header">Don’t want to miss the best events?
 						Subscribe to our newsletter!</h2>
@@ -158,24 +158,24 @@
 				</div>
 
 			</div>
-			<img src="images/kathrynEventImg/event__request.png" alt="">
+			<img src="images/kathrynEventImg/event__request.svg" alt="">
 		</div>
 	</div>
 	<footer>
 		<div class="footer__info">
 			<div class="footer__info__groups">
 				<div class="footer__info_group1">
-					<img src="img/logo-white.svg" alt="" class="footer__logo">
+					<img src="images/indexImg/logo-white.svg" alt="" class="footer__logo">
 					<p class="footer__p">Createx Online School is a leader in online studying. We have lots of courses and
 						programs from the main market experts. We provide relevant approaches to online learning,
 						internships and employment in the largest companies in the country. </p>
 					<div class="footer__media">
-						<a href=""><img src="img/facebook.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/twitter.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/youTube.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/telegram.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/instagram.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/linkedIn.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/facebook.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/twitter.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/youTube.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/telegram.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/instagram.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/linkedIn.svg" alt="" class="footer__img"></a>
 					</div>
 				</div>
 				<div class="footer__info_group2">
