--- a/events.html
+++ b/events.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="navBar navBar__courses-page">
 		<div class="navBar__group1">
-			<a href="index.html"><img src="img/logo.svg" alt="" class="logo navBar__logo"></a>
+			<a href="index.html"><img src="images/indexImg/logo.svg" alt="" class="logo navBar__logo"></a>
 			<ul class="navBar__menu">
 				<li><a href="aboutUs.html" class="navBar__text">About Us</a></li>
 				<li><a href="courses.html" class="navBar__text">Courses</a></li>
@@ -216,25 +216,25 @@
 
 		</div>
 		<div class="sibscribe__img__group">
-			<img src="img/sibscribe__img.png" alt="" class="sibscribe__img">
-			<img src="img/sibscribe__img.png" alt="">
+			<img src="images/indexImg/sibscribe__img.png" alt="" class="sibscribe__img">
+			<img src="images/indexImg/sibscribe__img.png" alt="">
 		</div>
 	</div>
 	<footer>
 		<div class="footer__info">
 			<div class="footer__info__groups">
 				<div class="footer__info_group1">
-					<img src="img/logo-white.svg" alt="" class="footer__logo">
+					<img src="images/indexImg/logo-white.svg" alt="" class="footer__logo">
 					<p class="footer__p">Createx Online School is a leader in online studying. We have lots of courses and
 						programs from the main market experts. We provide relevant approaches to online learning,
 						internships and employment in the largest companies in the country. </p>
 					<div class="footer__media">
-						<a href=""><img src="img/facebook.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/twitter.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/youTube.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/telegram.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/instagram.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/linkedIn.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/facebook.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/twitter.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/youTube.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/telegram.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/instagram.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/linkedIn.svg" alt="" class="footer__img"></a>
 					</div>
 				</div>
 				<div class="footer__info_group2">
