--- a/courses.html
+++ b/courses.html
@@ -14,7 +14,7 @@
 	<div class="our__container">
 		<div class="navBar navBar__courses-page">
 			<div class="navBar__group1">
-				<a href="index.html"><img src="img/logo.svg" alt="" class="logo navBar__logo"></a>
+				<a href="index.html"><img src="images/indexImg/logo.svg" alt="" class="logo navBar__logo"></a>
 				<ul class="navBar__menu">
 					<li><a href="aboutUs.html" class="navBar__text">About Us</a></li>
 					<li><a href="" class="navBar__text our__navBAr__text">Courses</a></li>
@@ -49,7 +49,7 @@
 			<div class="our__courses__cards our__courses__card">
 				<a href="codyFisher__courses.html">
 					<div class="our__courses__card card--marketing">
-						<img src="img/our__jeromeBell.png" alt="" class="our__card__img">
+						<img src="images/coursesImg/our__jeromeBell.png" alt="" class="our__card__img">
 						<div class="our__courses__card__group">
 							<h3 class="our__card__header card__header--marketing">Marketing</h3>
 							<p class="card__text">The Ultimate Google Ads Training Course</p>
@@ -62,7 +62,7 @@
 				</a>
 				<a href="codyFisher__courses.html">
 					<div class="our__courses__card  card--managment">
-						<img src="img/our__Marvin.jpg" alt="" class="our__card__img">
+						<img src="images/coursesImg/our__Marvin.jpg" alt="" class="our__card__img">
 						<div class="our__courses__card__group">
 							<h3 class="our__card__header card__header--management">Management</h3>
 							<p class="card__text">Prduct Management Fundamentals</p>
@@ -75,7 +75,7 @@
 				</a>
 				<a href="codyFisher__courses.html">
 					<div class="our__courses__card card--hr">
-						<img src="img/our__leslie.jpg" alt="" class="our__card__img">
+						<img src="images/coursesImg/our__leslie.jpg" alt="" class="our__card__img">
 						<div class="our__courses__card__group">
 							<h3 class="our__card__header card__header--hr">HR & Recruting</h3>
 							<p class="card__text">HR Management and Analytics</p>
@@ -88,7 +88,7 @@
 				</a>
 				<a href="codyFisher__courses.html">
 					<div class="our__courses__card card--marketing">
-						<img src="img/our__kristin.jpg" alt="" class="our__card__img">
+						<img src="images/coursesImg/our__kristin.jpg" alt="" class="our__card__img">
 						<div class="our__courses__card__group">
 							<h3 class="our__card__header card__header--marketing">Marketing</h3>
 							<p class="card__text">Brand Management & PR Communications</p>
@@ -101,7 +101,7 @@
 				</a>
 				<a href="codyFisher__courses.html">
 					<div class="our__courses__card card--design">
-						<img src="img/our__guy.jpg" alt="" class="our__card__img">
+						<img src="images/coursesImg/our__guy.jpg" alt="" class="our__card__img">
 						<div class="our__courses__card__group">
 							<h3 class="our__card__header card__header--design">Design</h3>
 							<p class="card__text">Graphic Design Basic</p>
@@ -114,7 +114,7 @@
 				</a>
 				<a href="codyFisher__courses.html">
 					<div class="our__courses__card card--managment">
-						<img src="img/our__dianne.jpg" alt="" class="our__card__img">
+						<img src="images/coursesImg/our__dianne.jpg" alt="" class="our__card__img">
 						<div class="our__courses__card__group">
 							<h3 class="our__card__header card__header--management">Management</h3>
 							<p class="card__text">Business Development Management</p>
@@ -127,7 +127,7 @@
 				</a>
 				<a href="codyFisher__courses.html">
 					<div class="our__courses__card ">
-						<img src="img/our__brooklyn.jpg" alt="" class="our__card__img">
+						<img src="images/coursesImg/our__brooklyn.jpg" alt="" class="our__card__img">
 						<div class="our__courses__card__group">
 							<h3 class="our__card__header card__header--development">Development</h3>
 							<p class="card__text">Highload Software Architecture</p>
@@ -140,7 +140,7 @@
 				</a>
 				<a href="codyFisher__courses.html">
 					<div class="our__courses__card card--managment">
-						<img src="img/our__kathryn.jpg" alt="" class="our__card__img">
+						<img src="images/coursesImg/our__kathryn.jpg" alt="" class="our__card__img">
 						<div class="our__courses__card__group">
 							<h3 class="our__card__header card__header--hr">HR & Recruting</h3>
 							<p class="card__text">Human Resources – Selection and Recruitment</p>
@@ -153,7 +153,7 @@
 				</a>
 				<a href="codyFisher__courses.html">
 					<div class="our__courses__card card--managment">
-						<img src="img/our__cody.jpg" alt="" class="our__card__img">
+						<img src="images/coursesImg/our__cody.jpg" alt="" class="our__card__img">
 						<div class="our__courses__card__group">
 							<h3 class="our__card__header card__header--design">Design</h3>
 							<p class="card__text">User Experience. Human-centered Design</p>
@@ -182,7 +182,7 @@
 			</div>
 		</div>
 		<div class="certificate__group2">
-			<img src="img/certificate__img.png" alt="" class="certificate__main__img">
+			<img src="images/indexImg/certificate__img.png" alt="" class="certificate__main__img">
 		</div>
 	</div>
 	<div class="main-beige">
@@ -191,27 +191,28 @@
 		<div class="subscribe__body">
 			<input type="text" class="searchButton" placeholder="Your working email">
 			<a href=""><button class="button button--gradient subscribe__button">Subscribe</button></a>
+
 		</div>
 		<div class="sibscribe__img__group">
-			<img src="img/sibscribe__img.png" alt="" class="sibscribe__img">
-			<img src="img/sibscribe__img.png" alt="">
+			<img src="images/indexImg/sibscribe__img.png" alt="" class="sibscribe__img">
+			<img src="images/indexImg/sibscribe__img.png" alt="">
 		</div>
 	</div>
 	<footer>
 		<div class="footer__info">
 			<div class="footer__info__groups">
 				<div class="footer__info_group1">
-					<img src="img/logo-white.svg" alt="" class="footer__logo">
+					<img src="images/indexImg//logo-white.svg" alt="" class="footer__logo">
 					<p class="footer__p">Createx Online School is a leader in online studying. We have lots of courses and
 						programs from the main market experts. We provide relevant approaches to online learning,
 						internships and employment in the largest companies in the country. </p>
 					<div class="footer__media">
-						<a href=""><img src="img/facebook.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/twitter.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/youTube.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/telegram.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/instagram.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/linkedIn.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/facebook.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/twitter.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/youTube.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/telegram.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/instagram.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/linkedIn.svg" alt="" class="footer__img"></a>
 					</div>
 				</div>
 				<div class="footer__info_group2">
