--- a/codyFisher__courses.html
+++ b/codyFisher__courses.html
@@ -15,7 +15,7 @@
 	<div class="main-beige">
 		<div class="navBar navBar__courses-page">
 			<div class="navBar__group1">
-				<a href="index.html"><img src="img/logo.svg" alt="" class="logo navBar__logo"></a>
+				<a href="index.html"><img src="images/indexImg/logo.svg" alt="" class="logo navBar__logo"></a>
 				<ul class="navBar__menu">
 					<li><a href="aboutUs.html" class="navBar__text">About Us</a></li>
 					<li><a href="courses.html" class="navBar__text our__navBAr__text">Courses</a></li>
@@ -87,7 +87,7 @@
 			</div>
 		</div>
 		<div class="teacher">
-			<img src="img/teacher__codyFisher.png" alt="" class="teacher__codyFisher">
+			<img src="images/codyCoursesImg/teacher__codyFisher.png" alt="" class="teacher__codyFisher">
 			<div class="teacher__group">
 				<div class="text-small courses__text">Course curator</div>
 				<div class="header__text teacher__courses__header">Cody Fisher</div>
@@ -201,13 +201,13 @@
 				<h4 class="program__lessons programm__lesson8"><span class="program__lessons__red"> Lesson 8. </span> Neque,
 					cursus sapien nullam id.</h4>
 			</div>
-			<img src="img/teacher__program__img.png" alt="" class="program__img">
+			<img src="images/codyCoursesImg/teacher__program__img.svg" alt="" class="program__img">
 		</div>
 	</div>
 	<div class="body-gray">
 		<div class="our__container">
 			<div class="teacher__register">
-				<img src="img/teacher__register.png" alt="" class="teacher__register__img">
+				<img src="images/codyCoursesImg/teacher__register.svg" alt="" class="teacher__register__img">
 				<div class="register__group">
 					<p class="text-small">Leave a request now and get 20% off!</p>
 					<h2 class="header__text">Register for the course</h2>
@@ -333,17 +333,17 @@
 		<div class="footer__info">
 			<div class="footer__info__groups">
 				<div class="footer__info_group1">
-					<img src="img/logo-white.svg" alt="" class="footer__logo">
+					<img src="images/indexImg//logo-white.svg" alt="" class="footer__logo">
 					<p class="footer__p">Createx Online School is a leader in online studying. We have lots of courses and
 						programs from the main market experts. We provide relevant approaches to online learning,
 						internships and employment in the largest companies in the country. </p>
 					<div class="footer__media">
-						<a href=""><img src="img/facebook.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/twitter.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/youTube.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/telegram.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/instagram.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/linkedIn.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/facebook.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/twitter.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/youTube.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/telegram.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/instagram.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/linkedIn.svg" alt="" class="footer__img"></a>
 					</div>
 				</div>
 				<div class="footer__info_group2">
