--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
 	<div class="our__container">
 		<div class="navBar navBar__courses-page">
 			<div class="navBar__group1">
-				<a href="index.html"><img src="img/logo.svg" alt="" class="logo navBar__logo"></a>
+				<a href="index.html"><img src="images/indexImg/logo.svg" alt="" class="logo navBar__logo"></a>
 				<ul class="navBar__menu">
 					<li><a href="aboutUs.html" class="navBar__text">About Us</a></li>
 					<li><a href="courses.html" class="navBar__text">Courses</a></li>
@@ -60,7 +60,7 @@
 			<div class="blog__body">
 				<div class="blog__listens__grid">
 					<div class="blog__listen1 blog__listen ">
-						<a href="hrStatisticsBlog.html"><img src="img/blog__marketing-podcast.png" alt=""
+						<a href="hrStatisticsBlog.html"><img src="images/blogImg/blog__marketing-podcast.png" alt=""
 								class="blog__img blogs__images"></a>
 						<ul class="blog__ul">
 							<li class="blog__li">Marketing</li>
@@ -73,7 +73,7 @@
 						<a href="hrStatisticsBlog.html" class="blog__a">Listen</a>
 					</div>
 					<div class="blog__listen2 blog__listen">
-						<a href="hrStatisticsBlog.html"><img src="img/blog__management-video.png" alt=""
+						<a href="hrStatisticsBlog.html"><img src="images/blogImg/blog__management-video.png" alt=""
 								class="blog__img blog__img__marketing"></a>
 						<ul class="blog__ul">
 							<li class="blog__li">Management</li>
@@ -172,7 +172,7 @@
 	</div>
 	<div class="body-gray">
 		<div class="blog__subscribe">
-			<img src="images/blogImg/blog__subscribe.png" alt="">
+			<img src="images/blogImg/blog__subscribe.svg" alt="">
 			<div class="event__subscribe__group">
 				<h2 class="discount__header blog__discount">Want to get the best articles weekly?<br>
 					Subscribe to our newsletter!</h2>
@@ -189,17 +189,17 @@
 		<div class="footer__info">
 			<div class="footer__info__groups">
 				<div class="footer__info_group1">
-					<img src="img/logo-white.svg" alt="" class="footer__logo">
+					<img src="images/indexImg/logo-white.svg" alt="" class="footer__logo">
 					<p class="footer__p">Createx Online School is a leader in online studying. We have lots of courses and
 						programs from the main market experts. We provide relevant approaches to online learning,
 						internships and employment in the largest companies in the country. </p>
 					<div class="footer__media">
-						<a href=""><img src="img/facebook.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/twitter.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/youTube.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/telegram.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/instagram.svg" alt="" class="footer__img"></a>
-						<a href=""><img src="img/linkedIn.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/facebook.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/twitter.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/youTube.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/telegram.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/instagram.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="images/indexImg/linkedIn.svg" alt="" class="footer__img"></a>
 					</div>
 				</div>
 				<div class="footer__info_group2">
